# hello-github-actions

./: Dockerfile  docker-compose.yml  hello.py  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: README.md
tests/: test_hello.py
