[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Goto Hayato <gh640@hey.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
