[tool.poetry]
name = "hello"
version = "0.1.0"
description = ""
authors = ["Goto Hayato <gh640@hey.com>"]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
black = "^24.2.0"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
